frontend/scss/molecules/_m-article-header.scss
/* ... */
.m-article-header--super-hero .m-article-header__info-trigger {
  bottom: 24px;

  @include breakpoint('small+') {
    bottom: 28px;
  }
}

.m-article-header--super-hero .m-article-header__info {
  bottom: 56px;

  @include breakpoint('small+') {
    bottom: 60px;
  }
}




.m-article-header--generic {
  padding-top: 0;

  @include breakpoint('large+') {
    min-height: auto;
    padding-top: 0;
    padding-right: 0;
    padding-left: 0;
  }
}

.m-article-header--generic .m-article-header__img {
  position: absolute;
  z-index: 1;
  left: 50%;
  top: 0;
  bottom: 0;
  width: 100vw;
  margin-left: -50vw;
  overflow: hidden;
}

.m-article-header--generic .m-article-header__img img,
.m-article-header--generic .m-article-header__img video {
  @include objectFitFix;
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: 50% 0;
}

.m-article-header--generic .m-article-header__text {
  position: relative;
  z-index: 2;
  padding-bottom: 44px;

  @include breakpoint('small+') {
    flex: 0 0 auto;
    order: 2;
    padding-top: 4px;
    padding-bottom: 80px;
  }

  @include breakpoint('large+') {
    padding-right: colspan(15, large);
    padding-left: colspan(15, large);
  }

  @include breakpoint('xlarge') {
    padding-right: colspan(15, xlarge);
    padding-left: colspan(15, xlarge);
  }
}

.m-article-header--generic-no-breadcrumb .m-article-header__text {
  @include breakpoint('small+') {
    padding-top: 4px;
    padding-bottom: 52px;
  }
}

.m-article-header--generic .title {
  @include tucked-margin-top($f-headline, ('xsmall': 40));
  padding-top: 8px;
}

.m-article-header__breadcrumb {
  display: none;
  position: relative;
  z-index: 2;
  flex: 0 0 auto;
  order: 1;
  flex-flow: row wrap;
  padding-top: 12px;
  padding-bottom: 12px;

  @include breakpoint('small+') {
    display: flex;
  }

  @include breakpoint('medium+') {
    padding-top: 8px;
  }
}

.m-article-header__breadcrumb::before {
  content: '';
  position: absolute;
  z-index: -1;
  left: 0;
  top: 100%;
  width: 100%;
  height: 1px;
  background-color: $color__rules--primary;
}

.m-article-header__breadcrumb li {
  display: block;
  flex: 0 0 auto;
  max-width: 100%;
  padding-right: 6px;
}

.m-article-header__breadcrumb .f-secondary {
  @include untuck();
}

.m-article-header--generic-w-img .title {
  color: $color__text--title-contrast;
  //text-shadow: 0 0 25px rgba(0, 0, 0, 1);
}

@supports (backdrop-filter: blur(5px)) or (-webkit-backdrop-filter: blur(5px)) {
  .m-article-header--generic-w-img .m-article-header__img[data-blur-img-dupe] {
    display: none;
  }
}
@supports not (clip-path: inset(0 0 0 0)) {
  .m-article-header--generic-w-img .m-article-header__img[data-blur-img-dupe] {
    display: none;
  }
}
@supports (not (backdrop-filter: blur(5px))) and (not (-webkit-backdrop-filter: blur(5px))) and (clip-path: inset(0 0 0 0)) and (filter: blur(5px)) {
  .m-article-header--generic-w-img .m-article-header__img {
    overflow: hidden;
  }

  .m-article-header--generic-w-img .m-article-header__img img,
  .m-article-header--generic-w-img .m-article-header__img video {
    left: -5px;
    right: -5px;
    top: -5px;
    width: calc(100% + 10px);
    height: calc(100% + 5px);
  }

  .m-article-header--generic-w-img .m-article-header__img[data-blur-img-dupe] img,
  .m-article-header--generic-w-img .m-article-header__img[data-blur-img-dupe] video {
    filter: blur(5px);
  }
}

.m-article-header--generic-w-img .m-article-header__breadcrumb::before {
  left: 50%;
  top: 0;
  width: 100vw;
  height: 100%;
  margin-left: -50vw;
  background-color: rgba(0,0,0,.25);
}

.m-article-header--generic-w-img .m-article-header__breadcrumb li {
  color: $color__text--title-contrast;
}

.m-article-header--generic-w-img .m-article-header__breadcrumb a {
  color: $color__text--title-contrast;
}


$imgPadding: 48px;
$thumbTease: 4px;

.m-article-header--gallery {
  display: block;
  padding-top: 0;

  @include breakpoint('large+') {
    min-height: 0;
    padding: 0;
  }
}

.m-article-header--gallery .m-article-header__img {
  @include background-fill;
  display: flex;
  flex-flow: column nowrap;
  justify-content: center;
  width: 100%;
  //height: calc(100vh - #{112px - $thumbTease + $imgPadding});
  //height: calc(100vh - 112px);
  height: calc(100vh - 156px);
  min-height: 500px;
  max-height: 600px;
  padding-top: 16px;
  padding-bottom: 116px;
  background-color: $color__bg--primary;

  @include breakpoint('small+') {
    //height: calc(100vh - #{128px - $thumbTease + $imgPadding});
    height: calc(100vh - 320px);
    min-height: 660px;
    max-height: 800px;
    padding-top: 40px;
    padding-bottom: 120px;
  }

  @include breakpoint('medium+') {
    //height: calc(100vh - #{140px - $thumbTease + $imgPadding});
    height: calc(100vh - 180px);
    min-height: 720px;
    max-height: 860px;
    padding-top: 48px;
    padding-bottom: 116px;
  }
}

.m-article-header--gallery .m-article-header__img-container {
  display: block;
  position: relative;
  flex: 0 0 auto;
  width: 100%;
  max-width: 843px;
  height: 100%;
  max-height: 843px;
  margin: auto;
}

.m-article-header--gallery .m-article-header__img-container img {
  display: block;
  position: relative;
  z-index: 1;
  left: 50%;
  top: 50%;
  width: auto;
  max-width: 100%;
  height: auto;
  max-height: 100%;
  transform: translate(-50%, -50%);
  transition: opacity .25s;

  &[data-gallery-fullscreen] {
    cursor: pointer;
  }
}

.m-article-header__img-credit {
  position: absolute;
  z-index: 4;
  left: 0;
  right: 0;
  bottom: 88px;
  margin-bottom: -4px;
  padding-bottom: 4px;
  text-align: center;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: $color__text--secondary;
  overflow: hidden;

  @include breakpoint('small+') {
    right: auto;
    bottom: 36px;
    max-width: calc(100% - 166px);
    text-align: left;
    white-space: normal;
    overflow: visible;
  }
}
/* ... */

